# cudaTorchSIFT

./: CMakeLists.txt  LICENSE  README.md
include/: keypoints_with_gradients.cuh
src/: CustomCudaTensor.cu  SIFT.cpp  keypoints_with_gradients.cu  keypoints_with_gradients.h  keypoints_with_gradients_cpu.cu  sift_functs.cpp
